--- a/Task-List/src/app/components/add-task/add-task.component.html
+++ b/Task-List/src/app/components/add-task/add-task.component.html
@@ -10,8 +10,8 @@
             type="text" 
             name="text" 
             id="text" 
-            placeholder="Add Task Text"
-            [(ngModel)]="text"    
+            placeholder="T Task Text"
+            [(ngModel)]="text"
         />
     </div>
 
